@@ -340,7 +340,8 @@ When invoked like that, it prompts in the minibuffer for one of the
 previous kills, offering completion and minibuffer-history navigation
 through previous kills recorded in the kill ring.  A similar feature
 in Isearch can be invoked if you bind 'C-s M-y' to the command
-'isearch-yank-pop'.
+'isearch-yank-pop'.  When the user option 'yank-from-kill-ring-rotate'
+is nil the kill ring is not rotated after 'yank-from-kill-ring'.
 
 ---
 ** New user options 'copy-region-blink-delay' and 'delete-pair-blink-delay'.
@@ -746,6 +747,10 @@ enabled, and how to enable it.
 If set to non-nil, Dired will dereference symbolic links when copying.
 This can be switched off on a per-usage basis by providing
 'dired-do-copy' with a 'C-u' prefix.
+
+*** New user option 'dired-do-revert-buffer'.
+Its non-nil value reverts the Dired buffer that is the destination
+of copy/rename/symlink/hardlink operations.
 
 *** New user option 'dired-mark-region' affects all Dired commands
 that mark files.  When non-nil and the region is active in Transient
